--- a/public/chat.html
+++ b/public/chat.html
@@ -16,7 +16,7 @@
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-smile"></i> ChatCord</h1>
-        <a id="leave-btn" class="btn">Leave Room</a>
+        <button class="btn"><a id="leave-btn">Leave Room</a></button>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
